apps/gateway-ai/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-ai
spec:
  controllerName: gateway.envoyproxy.io/ai-gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-ai
  namespace: envoy-ai-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  gatewayClassName: eg-ai
  listeners:
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      protocol: HTTPS
      hostname: "*.ai.froystein.jp"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-ai-https
